# QLabelling

./: .gitignore  ArrangementCurveInputCallback.h  ArrangementDemoGraphicsView.cpp  ArrangementDemoGraphicsView.h  ArrangementGraphicsItem.h  ArrangementPainterOstream.h  CMakeLists.txt  DeleteCurveMode.cpp  FillFaceCallback.cpp  FillFaceCallback.h  GraphicsViewCurveInput.h  ISnappable.h  MainQLabelling.cpp  PointsGraphicsItem.h  QArrangementLabellingGraphicsView.h  QGraphicsRectWithLabelItem.cpp  QGraphicsRectWithLabelItem.hpp  README.md  arrangement_2.cpp  cmake_fr_FR.ts  config.hpp  config.hpp.cmake.in
arrangement/: ArrangementObserver.h
callbacks/: ArrangementCurveInputCallback.h
demo/Arrangement_on_surface_2/: ArrangementCurveInputCallback.h  ArrangementDemoGraphicsView.cpp  ArrangementDemoGraphicsView.h  ArrangementDemoWindow.cpp  ArrangementDemoWindow.h  ArrangementDemoWindow.ui  ArrangementGraphicsItem.cpp  ArrangementGraphicsItem.h  ArrangementObserver.h  ArrangementPainterOstream.h  ArrangementSegmentInputCallback.h  ArrangementTypes.h  Arrangement_2.cbp  CMakeLists.txt  CurveGraphicsItem.h  DeleteCurveCallback.h  DeleteCurveMode.h  EnvelopeCallback.h  FillFaceCallback.h  GraphicsViewCurveInput.cpp  GraphicsViewCurveInput.h  GraphicsViewSegmentInput.cpp  GraphicsViewSegmentInput.h  NewTabDialog.cpp  OverlayDialog.cpp  PointLocationCallback.h  PointsGraphicsItem.cpp  PointsGraphicsItem.h  SplitEdgeCallback.cpp  SplitEdgeCallback.h  Utils.h  VerticalRayGraphicsItem.cpp  VerticalRayGraphicsItem.h  VerticalRayShootCallback.cpp  VerticalRayShootCallback.h  arrangement_2.cpp  moc_ArrangementDemoPropertiesDialog.cxx  moc_ArrangementDemoTab.cxx  moc_ArrangementDemoWindow.cxx  moc_Callback.cxx  (+9 more)
demo/Arrangement_on_surface_2/qt/: ArrangementDemoPropertiesDialog.cpp  ArrangementDemoPropertiesDialog.h  ArrangementDemoTab.cpp  ArrangementDemoTab.h  ArrangementDemoWindow.cpp  ArrangementDemoWindow.h  ArrangementDemoWindow.ui  Callback.h  DeleteCurveModeItemEditor.cpp  EnvelopeCallback.cpp  EnvelopeCallback.h  NewTabDialog.cpp  NewTabDialog.h  NewTabDialog.ui  OverlayDialog.cpp  QArrangementInfoWidget.cpp  QArrangementInfoWidget.h  QArrangementInfoWidget.ui  QLabellingLogWidget.hpp  QLabellingLogWidget.ui  SaveProjectDialog.cpp  SaveProjectDialog.h  SaveProjectDialog.ui
demo/Arrangement_on_surface_2/rc/: ArrangementDemoWindow.qrc
demo/Arrangement_on_surface_2/tests/: TestAlgebraic.cpp
graphics/: ArrangementGraphicsItem.h  CurveGraphicsItem.h  QArrangementLabellingGraphicsView.cpp
qt/: ArrangementDemoPropertiesDialog.cpp  ArrangementDemoPropertiesDialog.h  ArrangementDemoPropertiesDialog.ui  ArrangementDemoTab.cpp  ArrangementDemoTab.h  ArrangementDemoWindow.cpp  ArrangementDemoWindow.h  ArrangementDemoWindow.ui  Callback.cpp  ColorItemEditor.cpp  ColorItemEditor.h  OverlayDialog.cpp  OverlayDialog.h  OverlayDialog.ui  PropertyValueDelegate.cpp  PropertyValueDelegate.h  QArrangementInfoWidget.cpp  QArrangementInfoWidget.h  QArrangementInfoWidget.ui  QArrangementLabellingInfoWidget.cpp  QArrangementLabellingLogWidget.cpp  QArrangementLabellingLogWidget.h  QArrangementLabellingLogWidget.ui  QArrangementLabellingOverlayDialog.cpp  QArrangementLabellingPropertiesDialog.cpp  QArrangementLabellingPropertiesDialog.h  QArrangementLabellingPropertiesDialog.ui  QArrangementLabellingSaveProjectDialog.cpp  QArrangementLabellingTab.cpp  QArrangementLabellingTab.h  QArrangementLabellingWidget.h  QArrangementLabellingWindow.cpp  QArrangementLabellingWindow.h  QLabelItem.cpp  QLabelItem.hpp  QLabellingAbout.cpp  QLabellingAbout.hpp  QLabellingAbout.ui  QLabellingArrangementWindow.cpp  (+17 more)
src/QLabelling/: CMakeLists.txt  Copyright.txt  QArrangementLabellingMain.cpp  QArrangementLabellingVanishingPointsWidget.cpp  QArrangementLabellingVanishingPointsWidget.h  README.txt  cmake_fr_FR.ts  findnearestedge.cpp  findnearestedge.h
src/QLabelling/arrangement/: ArrangementBuffer.cpp  ArrangementBuffer.h  ArrangementObserver.h  ArrangementTypes.cpp  ArrangementTypes.h  DeleteCurveMode.cpp  DeleteCurveMode.h
src/QLabelling/callbacks/: ArrangementCurveInputCallback.h  CopyFaceCallback.cpp  CopyFaceCallback.h  DeleteCurveCallback.h  ExpandEdgeCallBack.cpp  ExpandEdgeCallBack.h  FillFaceCallback.h  MergeEdgeCallback.h  SplitEdgeCallback.h
src/QLabelling/cmake/: QLabelling.cpack.cmake  QLabelling.install.cmake
src/QLabelling/config/: config.hpp.cmake.in
src/QLabelling/graphics/: ArrangementGraphicsItem.h  CopyFaceSingleton.cpp  CopyFaceSingleton.h  GraphicsViewCurveInput.cpp  GraphicsViewCurveInput.h  PointsGraphicsItem.cpp  PointsGraphicsItem.h  QArrangementLabellingGraphicsView.cpp  QArrangementLabellingGraphicsView.h  VanishingPoints.cpp  VanishingPoints.h
src/QLabelling/qt/: DeleteCurveModeItemEditor.cpp  DeleteCurveModeItemEditor.h  PropertyValueDelegate.cpp  QArrangementLabellingInfoWidget.cpp  QArrangementLabellingInfoWidget.h  QArrangementLabellingInfoWidget.ui  QArrangementLabellingLogWidget.ui  QArrangementLabellingOverlayDialog.h  QArrangementLabellingOverlayDialog.ui  QArrangementLabellingPropertiesDialog.cpp  QArrangementLabellingPropertiesDialog.h  QArrangementLabellingPropertiesDialog.ui  QArrangementLabellingSaveProjectDialog.cpp  QArrangementLabellingSaveProjectDialog.h  QArrangementLabellingSaveProjectDialog.ui  QArrangementLabellingTab.cpp  QArrangementLabellingTab.h  QArrangementLabellingVanishingPointsWidget.cpp  QArrangementLabellingVanishingPointsWidget.h  QArrangementLabellingVanishingPointsWidget.ui  QArrangementLabellingWidget.cpp  QArrangementLabellingWidget.h  QArrangementLabellingWidget.ui  QArrangementLabellingWindow.cpp  QArrangementLabellingWindow.h  QArrangementLabellingWindow.ui  QLabelItem.cpp
src/QLabelling/rc/: QArrangementLabelling.qrc  QArrangementLabellingWindow.qrc
src/QLabelling/utilities/: Utils.h
test/QCGALArrangement/: CMakeLists.txt  MainQCGALArrangement.cpp
test/QCGALArrangement/qt/: QCGALArrangementMainWindow.cpp  QCGALArrangementMainWindow.hpp  QCGALArrangementMainWindow.ui
test/QCGALArrangement/rc/: RessourcesQCGALArrangement.qrc
(+12 files in other folders)
